--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,27 @@ h1 {
     color:white;
     text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 }
+
+#katsu {
+    width: 300px;
+    height:450px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+#spag {
+    width: 300px;
+    height:450px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+#steak{
+    width: 300px;
+    height:450px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
