--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ h1 {
 #katsu {
     width: 300px;
     height:450px;
-    margin-left: auto;
+    margin-left:auto;
     margin-right: auto;
     display: block;
 }
@@ -42,4 +42,8 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     display: block;
+}
+
+.imgcontainer{
+    float:left;
 }
