--- a/styles.css
+++ b/styles.css
@@ -46,5 +46,23 @@ h1 {
 }
 
 .imgcontainer{
+    display: flex;
+    flex-direction: column;
+    gap:10px;
+    align-items:center;
+    width:500px;
+    text-align: center;
     float:left;
+}
+
+.imgcontainer img:hover{
+    transform: scale(1.05);
+    transition: all ease ;
+    border-radius: 15px;
+    box-shadow: 0 0 5px rgb(8, 8, 8);
+}
+
+.imgcenter{
+    margin-left:510px;
+    margin-right:500px;
 }
