--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -2,3 +2,10 @@ body {
     background: linear-gradient(195deg, rgb(54, 52, 52),rgb(172, 166, 166));
     min-height: 100vh;
 }
+
+.footer{
+    position:absolute;
+    bottom:0;
+    width:100%;
+    text-align: center;
+}
