--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,13 @@ h1 {
     box-shadow: 0 0 5px rgb(8, 8, 8);
 }
 
-
+.content{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 20px;
+    gap:20px;
+   }
 
 p{
     font-size:25px;
@@ -73,10 +79,13 @@ p{
 }
 
 .footer{
-    position:absolute;
-    bottom:0;
-    width:100%;
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    height: 0;
+    align-items:center;
+    position: relative;
+    bottom: 0;
 }
 
 p2{
