--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -4,8 +4,12 @@ body {
 }
 
 .footer{
-    position:absolute;
-    bottom:0;
-    width:100%;
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    height: 160px;
+    align-items: flex-end;
+    position: relative;
+    bottom: 0;
+    margin: 0;
 }
