--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -6,10 +6,9 @@ body {
 .footer{
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
-    height: 160px;
-    align-items: flex-end;
+    justify-content: center;
+    height: 0;
+    align-items: center;
     position: relative;
     bottom: 0;
-    margin: 0;
 }
