--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -12,3 +12,17 @@ body {
     position: relative;
     bottom: 0;
 }
+
+.ingredients{
+    border-style: solid;
+}
+
+.left{
+    
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+    padding-left: 30px;
+    width:420px;
+    height: 1507px;
+}
