--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -13,16 +13,9 @@ body {
     bottom: 0;
 }
 
-.ingredients{
-    border-style: solid;
-}
-
-.left{
-    
-    display: flex;
-    flex-direction: column;
-    gap:20px;
-    padding-left: 30px;
-    width:420px;
-    height: 1507px;
+div{
+    width: 320px;
+  padding: 10px;
+  border: 5px solid gray;
+  margin: 0;
 }
