--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -13,9 +13,17 @@ body {
     bottom: 0;
 }
 
-div{
+.left{
   padding: 10px;
   border: 5px solid gray;
   margin: 0;
   width: 320px;
+}
+
+.right{
+  padding: 10px;
+  border: 5px solid gray;
+  margin: 0;
+  width: 320px;
+  float:right;
 }
