--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -13,19 +13,10 @@ body {
     bottom: 0;
 }
 
-.left{
+div{
   padding: 10px;
   border: 5px solid gray;
   margin: 0;
-  width: 320px;
+  width: 1000px;
 }
 
-.right{
-  padding: 10px;
-  border: 5px solid gray;
-  margin: 0;
-  width: 320px;
-  display:flex;
-  position:relative;
-  float:right;
-}
