--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -15,8 +15,11 @@ body {
 
 div{
   padding: 10px;
-  border: 5px solid gray;
+  border: 5px solid white;
   margin: 0;
   width: 1000px;
 }
 
+hr{
+  border-width: 5px;
+}
