--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -4,20 +4,31 @@ body {
 }
 
 .footer{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 0;
-    align-items: center;
-    position: relative;
-    bottom: 0;
+  position: absolute;
+  bottom: 0;
+  width:  0 auto;
+  height: -.5rem;
 }
 
-div{
-  padding: 10px;
-  border: 5px solid white;
-  margin: 0;
-  width: 1000px;
+.left{
+  float:left;
+  width:300px;
+  height:800px;
+  border:5px solid #995555;
+}
+
+.right{
+  float:right;
+  width:2100px;
+  height:800px;
+  border:5px solid cyan;
+}
+
+p2{
+  text-align: center;
+  color: white;
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+  font-weight: bold;
 }
 
 hr{
