--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -13,14 +13,14 @@ body {
 .left{
   float:left;
   width:300px;
-  height:800px;
+  height:500px;
   border:5px solid #995555;
 }
 
 .right{
   float:right;
-  width:2100px;
-  height:800px;
+  width:1500px;
+  height:500px;
   border:5px solid cyan;
 }
 
@@ -33,4 +33,35 @@ p2{
 
 hr{
   border-width: 5px;
+}
+
+p{
+  color: white;
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+  font-weight: bold;
+  font-size: 35px;
+}
+
+h1 {
+  font-size: 50px;
+  margin-top: 0;
+  margin-bottom: 15px;
+  margin-left: 100px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color:white;
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+}
+
+ul{
+  color: white;
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+ol{
+  color: white;
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+  font-weight: bold;
+  font-size: 20px;
 }
